--- a/index.html
+++ b/index.html
@@ -8,45 +8,89 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo"></a>
-        <nav class="navigation">
-            <ul class="navigation-list">
-                <li class="navigation-item"><a href="" class="navigation-link"></a></li>
-                <li class="navigation-item"><a href="" class="navigation-link"></a></li>
-                <li class="navigation-item"><a href="" class="navigation-link"></a></li>
-            </ul>
+        <nav>
+        <a href="#">WEBSTUDIO</a>
+        <ul>
+            <li><a href="#">Studio</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
         </nav>
-        <ul class="contacts-list">
-            <li class="contacts-item"><a href="" class="contacs-link"></a></li>
-            <li class="contacts-item"><a href="" class="contacs-link"></a></li>
+        <ul>
+            <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
     <main>
-        <section class="our-team">
-            <h2></h2>
-            <ul class="team-list">
-                <li class="team-item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </li>
-                <li class="team-item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </li>
-                <li class="team-item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </li>
-                <li class="team-item">
-                    <img src="" alt="">
-                    <h3></h3>
-                    <p></p>
-                </li>
-            </ul>
-        </section>
+    <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+    </section>
+    <section>
+        <h2>Benefits</h2>
+        <ul>
+            <li>
+                <h3>Strategy</h3>
+                <p>Our goal is to identify the business
+                problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li>
+                <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li>
+                <h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>What are we doing</h2>
+        <ul>
+            <li>
+                <img src="/images/Rectangle71.jpg" alt="computer" width="360">
+            </li>
+            <li>
+                <img src="/images/Rectangle71(1).jpg" alt="phone screenshots" width="360">
+            </li>
+            <li>
+                <img src="/images/Rectangle71(2).jpg" alt="phone and computer" width="360">
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Our Team</h2>
+        <ul>
+            <li>
+                <img src="/images/img.jpg" alt="men mark guerrero" width="264">
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+            </li>
+            <li>
+                <img src="/images/img(1).jpg" alt="men tom ford" width="264">
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li>
+                <img src="/images/img(2).jpg" alt="girl camila garcia" width="264">
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="/images/img(3).jpg" alt="men daniel wilson" width="264">
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </li>
+        </ul>
+    </section>
     </main>
+    <footer>
+        <a href="#">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
